--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Custom Styles -->
     <link rel="stylesheet" href="styles/style.css">
 
-    <title>Frontend Mentor | [Blogr]</title>
+    <title>[Blogr] | Frontend Mentor </title>
 </head>
 
 <body>
