Made It Pretty Responsive

--- a/index.html
+++ b/index.html
@@ -20,64 +20,67 @@
 </head>
 
 <body>
-    <div class="hero">
+    <header>
 
-        <header>
-            <div class="logo__menu">
+        <a href="/" class="logo">
+            <img src="/images/logo.svg" alt="Blogr" />
+        </a>
 
-                <a href="/" class="logo">
-                    <img src="/images/logo.svg" alt="Blogr" />
-                </a>
-
-
-                <div class="menu">
-                    <div class="menu__item">
-                        <p>Product</p>
-                        <ul>
-                            <li>
-                                Overview
-                            </li>
-                            <li>Pricing</li>
-                            <li>
-                                Marketplace
-                            </li>
-                            <li>Integrations</li>
-                        </ul>
-                    </div>
-
-                    <div class="menu__item">
-                        <p>Company</p>
-                        <ul>
-                            <li>About</li>
-                            <li>Team</li>
-                            <li>Blog</li>
-                            <li>Careers</li>
-                        </ul>
-                    </div>
-
-                    <div class="menu__item">
-                        <p>Connect</p>
-                        <ul>
-                            <li>Contact</li>
-                            <li>Newsletter</li>
-                            <li>LinkedIn</li>
-                        </ul>
-                    </div>
-                </div>
+        <div class="menu">
+            <div class="menu__item">
+                <p>Product</p>
+                <ul>
+                    <li>
+                        Overview
+                    </li>
+                    <li>Pricing</li>
+                    <li>
+                        Marketplace
+                    </li>
+                    <li>Integrations</li>
+                </ul>
             </div>
 
-            <div class="call_to_action">
+            <div class="menu__item">
+                <p>Company</p>
+                <ul>
+                    <li>About</li>
+                    <li>Team</li>
+                    <li>Blog</li>
+                    <li>Careers</li>
+                </ul>
+            </div>
 
-                <button class="login">
+            <div class="menu__item">
+                <p>Connect</p>
+                <ul>
+                    <li>Contact</li>
+                    <li>Newsletter</li>
+                    <li>LinkedIn</li>
+                </ul>
+            </div>
+
+
+        </div>
+
+
+        <div class="call_to_action">
+
+            <button class="login">
                     Login
                 </button>
 
 
-                <button> Sign Up</button>
+            <button> Sign Up</button>
 
-            </div>
+        </div>
 
-        </header>
+        <span class="mobile_toggle"></span>
+
+    </header>
+
+    <div class="hero">
+
 
 
         <section class="info">
@@ -214,7 +217,7 @@
 
 
         <div class="attribution">
-            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Code Pray Code</a>.
         </div>
     </footer>
 
