--- a/index.html
+++ b/index.html
@@ -131,14 +131,16 @@
     </section>
 
     <section class="section2">
-        <div class="left">
-            <img src="images/illustration-phones.svg" />
-        </div>
-        <div class="right">
-            <h1>State of the Art Infrastructure</h1>
-            <p>
-                With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
-            </p>
+        <div class="section__content">
+            <div class="left">
+                <img src="images/illustration-phones.svg" />
+            </div>
+            <div class="right">
+                <h1>State of the Art Infrastructure</h1>
+                <p>
+                    With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
+                </p>
+            </div>
         </div>
 
     </section>
